--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -32,8 +32,8 @@ RUN addgroup -S mitmproxy && adduser -S -G mitmproxy mitmproxy \
 VOLUME /home/mitmproxy/.mitmproxy
 
 COPY docker-entrypoint.sh /usr/local/bin/
-COPY mitm.py /home/mitm.py
+COPY worker.py /home/worker.py
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 EXPOSE 8080
-CMD ["mitmdump -s /home/mitm.py"]
+CMD ["mitmdump -s /home/worker.py"]
